# wg-quickrs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.agent.yml  docker-compose.init.yml  docker-compose.local.yml  docker-compose.yml  installer.sh
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  push.yml  release.yml  update-dockerhub-readme.yml  version-watcher.yml
agent/: Cargo.toml  build.rs
agent/src/: api.rs  app.rs  cli.rs  commands.rs  macros.rs  main.rs  server.rs
agent/src/conf/: logic.rs  mod.rs  network.rs  respond.rs  timestamp.rs  util.rs
agent/src/web/: mod.rs  server.rs
agent/src/wireguard/: cmd.rs  mod.rs  respond.rs  util.rs
cert/: Dockerfile  make-tls-certs.sh
config-wasm/: Cargo.toml
config-wasm/src/: lib.rs  types.rs
dev/: DEVELOPING.md
dev/bruno/wg-quickrs/: api-network-lease-id-address.bru  api-token.bru  api-wireguard-pre_shared_key.bru  api-wireguard-public_private_keys.bru  api-wireguard-server-status.bru  authenticate.bru  bruno.json  collection.bru  network-config.bru  network-lease-id-address.bru  network-summary.bru  version.bru  wireguard-pre_shared_key.bru  wireguard-public_private_keys.bru  wireguard-server-status.bru
dev/bruno/wg-quickrs/environments/: wg-quickrs.bru
dev/postman/: wg-rusteze.postman_environment.json
docs/: BUILDING.md  CLI_REFERENCE.md  DEVELOPING.md
docs/notes/: amneziawg.md  macos-firewall.md  network-setup.md  schema.md  static-binary.md  upgrading.md
docs/quick-start/: cli.md  docker.md  router.md  server.md
postman/: wg-rusteze.postman_collection.json  wg-rusteze.postman_environment.json
rust-agent/: Cargo.toml  build.rs
rust-agent/src/: cli.rs  commands.rs  main.rs
rust-agent/src/commands/: agent.rs  config.rs  helpers.rs  init.rs  mod.rs  validation.rs
rust-agent/src/conf/: mod.rs  network.rs  respond.rs  timestamp.rs  util.rs
rust-agent/src/web/: api.rs  app.rs  server.rs
rust-agent/src/wireguard/: cmd.rs  respond.rs
rust-cli/: Cargo.toml
rust-cli/src/: lib.rs
rust-wasm/src/: helpers.rs  lib.rs  types.rs  validation.rs
src/: .gitignore  Cargo.toml  Dockerfile  api.rs  app.rs  main.rs  run-md.sh
src/api/: conf.rs
src/conf/: logic.rs  mod.rs  timestamp.rs  types.rs
src/helpers/: mod.rs
src/rust-agent/: Cargo.toml  build.rs
src/rust-agent/src/: cli.rs  macros.rs  main.rs
src/rust-agent/src/commands/: agent.rs  config.rs  init.rs  mod.rs  validation.rs
src/rust-agent/src/conf/: network.rs  respond.rs  util.rs
src/rust-agent/src/web/: api.rs  app.rs  server.rs
src/rust-agent/src/wireguard/: cmd.rs  respond.rs
src/rust-cli/: Cargo.toml
src/rust-cli/src/: lib.rs
src/rust-wasm/: Cargo.toml
src/rust-wasm/src/: lib.rs  types.rs  validation.rs
src/web/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
src/web/src/: App.vue  main.js  style.css
src/web/src/components/: change-sum.vue  map-visual.vue  password-dialog.vue  peer-config-dialog.vue  peer-config-window.vue  peer-create-dialog.vue  peer-create-window.vue  (+1 more)
src/wg-quickrs/: Cargo.toml  build.rs
src/wg-quickrs-cli/: Cargo.toml
src/wg-quickrs-cli/src/: agent.rs  lib.rs
src/wg-quickrs-lib/: Cargo.toml  build.rs
src/wg-quickrs-lib/src/: helpers.rs  lib.rs  macros.rs
src/wg-quickrs-lib/tests/: helpers.rs  validation.rs
src/wg-quickrs-wasm/: Cargo.toml
src/wg-quickrs-wasm/src/: helpers.rs  lib.rs  macros.rs  timestamp.rs  types.rs  validation.rs  validation_helpers.rs
src/wg-quickrs-wasm/src/types/: api.rs  conf.rs  config.rs  misc.rs  mod.rs  network.rs
src/wg-quickrs-wasm/src/validation/: agent.rs  config_file.rs  error.rs  mod.rs  network.rs
src/wg-quickrs-wasm/tests/: helpers.rs  validation.rs
src/wg-quickrs-web/: .env.production  index.html  package-lock.json  package.json  vite.config.js
src/wg-quickrs-web/src/: App.vue  main.js
src/wg-quickrs/src/: cli.rs  helpers.rs  lib.rs  main.rs
src/wg-quickrs/src/commands/: agent.rs  config.rs  helpers.rs  init.rs  mod.rs  validation.rs
src/wg-quickrs/src/commands/agent/: init.rs  run.rs
src/wg-quickrs/src/commands/config/: add.rs  generate_conf.rs  get.rs  list.rs  mod.rs  remove.rs  reset.rs  set.rs  toggle.rs
src/wg-quickrs/src/conf/: helpers.rs  mod.rs  network.rs  respond.rs  util.rs
src/wg-quickrs/src/web/: api.rs  app.rs  server.rs
src/wg-quickrs/src/wireguard/: cmd.rs  mod.rs  respond.rs  wg_quick.rs  wg_quick_darwin.rs  wg_quick_linux.rs
src/wg-quickrs/tests/: network.rs  validation.rs
src/wireguard/: util.rs
tests/bruno/wg-quickrs/: api-network-config.bru  api-network-lease-id-address.bru  api-network-reserve-address.bru  api-network-summary.bru  api-token.bru  api-version.bru  api-wireguard-pre-shared-key.bru  api-wireguard-private-key.bru  api-wireguard-public-private-keys.bru  api-wireguard-server-status.bru  api-wireguard-status.bru  collection.bru  version.bru
tests/deployment/: .gitignore  README.md
tests/deployment/aws/: deploy.yml  destroy.yml  terraform.tf.j2
tests/pytest/: conftest.py  helpers.py  requirements.txt
tests/pytest/api/: test_auth.py  test_bruno.py  test_keys.py  test_network_config.py  test_network_config_field_validation.py  test_network_lease_id_address.py  test_network_reserve_address.py  test_network_summary.py  test_version.py  test_wireguard.py
tests/pytest/cli/: test_agent_commands.py  test_agent_init.py  test_agent_set.py  test_config_add.py  test_config_conf.py  test_config_get.py  test_config_list.py  test_config_ls.py  test_config_remove.py  test_config_setters.py  test_config_validation.py  test_help.py  test_init.py  test_init_agent.py  test_version_mismatch.py
tests/vagrant/: README.md
tests/vagrant/deployment/: Vagrantfile
web/: .env.development  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
web/src/: App.vue
web/src/components/: change-sum.vue  custom-dialog.vue  map-visual.vue  password-dialog.vue  peer-config-window.vue  peer-create-window.vue
web/src/js/: api.js  wg-helper.js
(+80 files in other folders)
