[package]
name = "wg-rusteze"
version = "0.1.0"
authors = ["Yaşar İdikut <yasar8000@gmail.com>"]
edition="2021"

[dev-dependencies]
cargo-watch = "8.5.3"

[dependencies]
actix-web = "4"
mime_guess = "2.0.4"
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
sha2 = "0.10.8"
base16ct = "0.2.0"
