[package]
name = "wg-rusteze"
version = "0.1.0"
authors = ["Yaşar İdikut <yasar8000@gmail.com>"]
edition = "2024"
build = "build.rs"
include = [
    "src/**",
    "build.rs",
    "web/package.json",
]

[build-dependencies]
chrono = "0.4.41"
serde_json = "1.0"
toml = "0.9.2"

[dev-dependencies]
cargo-watch = "8.5.3"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
mime_guess = "2.0.4"
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
sha2 = "0.10.8"
base16ct = "0.2.0"
log = "0.4.22"
simple_logger = "5.0.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
once_cell = "1.20.2"
config-wasm = { path = "../config-wasm", default-features = false }
