[package]
name = "wg-quickrs"
version = "0.1.0"
authors = ["Yaşar İdikut <yasar8000@gmail.com>"]
edition = "2024"
build = "build.rs"
include = [
    "src/**",
    "build.rs",
    "web/package.json",
]

[build-dependencies]
chrono = "0.4.41"
serde_json = "1.0"
toml = "0.9.2"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
rust_cli = { path = "../rust-cli" }

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-cors = "0.7"
mime_guess = "2.0.4"
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
sha2 = "0.10.8"
base16ct = "0.2.0"
log = "0.4.22"
simple_logger = "5.0.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
once_cell = "1.20.2"
rust-wasm = { path = "../rust-wasm", default-features = false }
rust_cli = { path = "../rust-cli" }
tempfile = "3"
rustls = "0.23.31"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
argon2 = "0.5.3"
thiserror = "2.0.12"
dialoguer = "0.11.0"
ipnetwork = "0.21.1"
get_if_addrs = "0.5.3"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
dirs = "6.0.0"
aws-lc-rs = { version = "1.14.0", features = ["bindgen"] }
