[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
thiserror = "2.0.12"
ipnet = "2.11.0"
regex = "1.11.1"
hostname-validator = "1.1.1"

[features]
default = []         # Do not enable wasm-bindgen by default
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
