[package]
name = "wg-quickrs-wasm"
edition = "2024"
rust-version = "1.89"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.3.4", features = ["wasm_js"], optional = true }
thiserror = "2.0.12"
ipnet = "2.11.0"
hostname-validator = "1.1.1"
base64 = "0.22.1"
x25519-dalek = "1.1.1"
rand = "0.9.2"

[features]
default = []         # Do not enable wasm-bindgen by default
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "getrandom"]
