[package]
name = "wg-quickrs-wasm"
edition = "2024"
rust-version = "1.90"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
chrono = "0.4.41"
toml = "0.9.8"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
ipnet = { version = "2.11.0", features = ["serde"] }
hostname-validator = "1.1.1"
base64 = "0.22.1"
x25519-dalek = "1.1.1"
rand = "0.9.2"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
sha2 = "0.10.9"
bincode = "1.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
get_if_addrs = "0.5.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.100" }
serde-wasm-bindgen = { version = "0.6" }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
