[package]
name = "wg-quickrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
build = "build.rs"
include = [
    "src/**",
    "build.rs",
    "web/package.json",
]

[features]
docker = []


[build-dependencies]
chrono = "0.4.41"
serde_json = "1.0"
toml = "0.9.2"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
wg-quickrs-cli = { path = "../wg-quickrs-cli" }

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-cors = "0.7"
mime_guess = "2.0.4"
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
sha2 = "0.10.8"
base16ct = "0.2.0"
log = "0.4.22"
simple_logger = "5.0.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
once_cell = "1.20.2"
wg-quickrs-cli = { path = "../wg-quickrs-cli" }
wg-quickrs-wasm = { path = "../wg-quickrs-wasm", default-features = false }
tempfile = "3"
rustls = "0.23.31"
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
rand = "0.9.2"
argon2 = "0.5.3"
thiserror = "2.0.12"
dialoguer = "0.11.0"
ipnetwork = "0.21.1"
get_if_addrs = "0.5.3"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
dirs = "6.0.0"
aws-lc-rs = { version = "1.14.0", features = ["bindgen"] }
libc = "0.2.176"
semver = "1.0.27"
