[package]
name = "wg-quickrs"
version = "1.0.0-rc"
edition = "2024"
rust-version = "1.90"
build = "build.rs"
include = [
    "src/**",
    "build.rs",
    "web/package.json",
]

[features]
docker = []


[build-dependencies]
chrono = "0.4.41"
serde_json = "1.0"
toml = "0.9.2"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
wg-quickrs-cli = { path = "../wg-quickrs-cli" }

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-cors = "0.7"
mime_guess = "2.0.4"
rust-embed = "8.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
sha2 = "0.10.8"
base16ct = "0.3.0"
log = "0.4.22"
simple_logger = "5.1.0"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.41"
clap = { version = "4.5.49", features = ["derive"] }
once_cell = "1.21.3"
wg-quickrs-cli = { path = "../wg-quickrs-cli" }
wg-quickrs-wasm = { path = "../wg-quickrs-wasm", default-features = false }
tempfile = "3"
rustls = "0.23.33"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
rand = "0.9.2"
argon2 = "0.5.3"
thiserror = "2.0.12"
dialoguer = "0.12.0"
ipnetwork = "0.21.1"
get_if_addrs = "0.5.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dirs = "6.0.0"
aws-lc-rs = { version = "=1.14.0", features = ["bindgen"] }
libc = "0.2.176"
semver = "1.0.27"
regex = "1.12.2"
